network/product-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product
  namespace: default
  annotations:
    konghq.com/methods: "GET,POST"

spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /v1/product
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
