network/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  namespace: default
  annotations:
    konghq.com/methods: "GET,POST"

spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: test-service
                port:
                  number: 3001
          - path: /try
            pathType: Prefix
            backend:
              service:
                name: test-service
                port:
                  number: 3001
